Add preliminary doc for Supply.share

--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -217,6 +217,21 @@ Creates an on-demand supply from the values passed to this method.
     $s.tap(&say);           # 1\n2\n3\n
     $s.done;
 
+=head2 method share
+
+    method share(Supply:D:) returns Supply:D
+
+    my $s = Supply.from-list(^100000).share;
+    my @first;
+    $s.tap: { @first.push($_) };
+    my @second;
+    $s.tap: { @second.push($_) };
+    say @first + @second;
+
+Creates a live supply from an on-demand supply, thus making it possible to
+share the values of the on-demand supply on multiple taps, instead of each
+tap seeing all values from the on-demand supply.
+
 =head2 method flat
 
     method flat(Supply:D:) returns Supply:D
