document implicit binding of state variables

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -556,6 +556,17 @@ As with C<my>, declaring multiple C<state> variables must be placed
 in parentheses and for declaring a single variable, parentheses may
 be omitted.
 
+Please note that many operators come with implicit binding, what will lead to actions at a distance. Use C<.clone> or coercion to create a new container that can be bound to.
+
+    my @a;
+    sub f () { 
+    	state $i;
+    	$i++;
+    	@a.push: "k$i" => $i # <-- .clone goes here
+    };
+    f for 1..3; 
+    dd @a; # «Array $var = $[:k1(3), :k2(3), :k3(3)]»
+
 =head3 The C<$> Variable
 
 As well as explicitly declared named state variables C<$> can be used
