Added bool and size_t to NC doc. Also add a bit of words on typed pointer

--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -69,6 +69,8 @@ likely grow with time).
     Str            (C string)
     CArray[int32]  (int* in C, an array of integers)
     Pointer[void]  (void* in C, can point to all other types)
+    bool           (bool from C99)
+    size_t         (size_t in C)
 
 Note that the lack of a C<returns> trait is used to indicate void return type.
 Do I<not> use the 'void' type anywhere except in the Pointer parameterization.
@@ -271,7 +273,21 @@ instead:
 
 =comment TODO
 
-TBD
+TBD more
+
+You can type your C<Pointer> with passing the type as parameter. It works with native type
+but also C<CArray> and C<CStruct> defined type. NativeCall will not implicitly alloc the memory for it
+even when calling new on them.
+It's mostly useful in the case of a C routine returning one or if emebeded in a C<CStruct>.
+
+You have to call C<.deref> on it to access the embeded type.
+
+  my Pointer[int32] $p; #For a pointer on int32;
+  my Pointer[MyCstruct] $p2 = some_c_routine();
+  my MyCstruct $mc = $p2.deref;
+  say $mc.field1;
+  
+  
 
 =head1 Buffers and Blobs
 
