Describe the new restrictions on some zero-argument funcs

--- a/Language/5to6-perlfunc.pod
+++ b/Language/5to6-perlfunc.pod
@@ -797,9 +797,11 @@ used as a method: C<@new = @old.map: { $_ * 2 }>
 
 =item mkdir FILENAME
 
+Works as in Perl 5.
+
 =item mkdir
 
-Works as in Perl 5.
+The zero argument (implicit C<$_>) version is not permitted in Perl 6.
 
 =head2 msg*
 
@@ -1344,7 +1346,6 @@ Available in Perl 6. Can also be used as a method. C<< splice(@foo, 2,3,
 
 =item split /PATTERN/
 
-=item split
 
 Works mostly as in Perl 5. There are some exceptions, though. To get the
 special behavior of using the empty string, you must actually use the
@@ -1357,6 +1358,11 @@ to use the named parameter C<:all>, like this: C<split(';', "a;b;c",
 they are in Perl 5. For that behavior, see C<comb>. Details on C<split>
 are at L<http://doc.perl6.org/routine/split>. Unsurprisingly, C<split>
 also now works as a method: C<"a;b;c".split(';')>
+
+=item split
+
+The zero argument version must now be called with an explicit empty string, as
+described above.
 
 =head2 sprintf
 
@@ -1624,9 +1630,12 @@ callframe.annotations<file line>;>
 
 =item unlink LIST
 
+Still available. Usable as a method: C<"filename".IO.unlink>
+
 =item unlink
 
-Still available. Usable as a method: C<"filename".IO.unlink>
+The zero argument (implicit C<$_>) version of unlink is not available in Perl
+6.
 
 =head2 unpack
 
