Add native-descriptor description

--- a/Type/IO/Handle.pod
+++ b/Type/IO/Handle.pod
@@ -168,6 +168,14 @@ Will flush the filehandle to disk.
 
     $fh.flush;
 
+=head2 method native-descriptor
+
+    method native-descriptor()
+
+This returns a value that the operating system would understand as a "file descriptor" and
+is suitable for passing to a native function that requires a file descriptor as an
+argument such as C<fcntl> or C<ioctl>. 
+
 =head1 Related roles and classes
 
 See also the related role L<IO> and the related class L<IO::Path>.
