Actually link to Blue Tiger script instead of just mentioning it

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -904,7 +904,8 @@ was written first.
 The simplest way to deal with this is just to change any C<|> in your
 Perl 5 regex to a C<||>.
 
-TODO more rules. Use C<translate_regex.pl> from Blue Tiger in the meantime.
+TODO more rules. Use L<< C<translate_regex.pl> from Blue
+Tiger|https://github.com/Util/Blue_Tiger/ >> in the meantime.
 
 =head2 Pragmas
 
