Fixes #249 incorrect variable name

--- a/Language/classtut.pod
+++ b/Language/classtut.pod
@@ -360,7 +360,7 @@ handle default values too:
     has @!dependencies;
     has Bool ($.done, $.ready);
     submethod BUILD(
-            :@!callback,
+            :&!callback,
             :@!dependencies,
             :$!done = False,
             :$!ready = not @!dependencies
