Document signature literals

--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -399,6 +399,24 @@ A L<Regex|/type/Regex> is declared with slashes like C</foo/>. Note that this C<
 
     my $r = /foo/; # Regexes can be assigned to variables
 
+=head3 Signature literals
+
+Signatures can be used standalone for pattern matching, in addition to the
+typical usage in sub and block declarations. A standalone signature is declared
+starting with a colon:
+
+    say "match!" if 5, "fish" ~~ :(Int, Str) #=> match!
+
+    my $sig = :(Int $a, Str);
+    say "match!" if (5, "fish") ~~ $sig; #=> match!
+
+    given "foo", 42 {
+      when :(Str, Str) { "This won't match" }
+      when :(Str, Int $n where $n > 20) { "This will!" }
+    }
+
+See the L<Signatures|/type/Signature> documentation for more about signatures.
+
 =head2 Declarations
 
 =head3 Variable declaration
